tests/golden/errors/missing_blank_between_decls.kso
fn greet name
  "hi, {name}"
main = print (greet "kanso")
